stage0/tests/compile_fail/moves/move_after_borrow.dg
// A value cannot be moved while a borrow of it is still live (the borrow `r`
// is used after the move, so it overlaps and must be rejected).
type P { x: i32 }
func take(p: P) -> i32 { p.x }
func main() -> i32 {
    var p = P { x: 7 }
    let r = ref p
    take(p)
    r.x
}
